# Giftly

./: .env  .env.example  .gitignore  CLAUDE.md  DOCKERFILE  PLAN.md  README.md  SECURITY_ANALYSIS.md  backend_performance_investigation.md  entrypoint.sh  fix_indentation.py  fix_send_message.py  kilo.json  mcp.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_otp.py  w.sh
.github/workflows/: ci.yml
.kilo/plans/: 1774480365329-swift-star.md  1775214223414-hidden-sailor.md
.kilo/skills/: git_push.sh  gitp
@docs/: SECURITY_FINDINGS.md
backend/: .env  README.md  admin.py  auth.py  check_orders.py  config.py  database.py  main.py  models.py  paylink_client.py  requirements.txt  reset_admin.py  schemas.py  storage_client.py  test_message_media.py  test_order_creation.py  test_storage.py  websocket_manager.py
backend/middleware/: activity.py
backend/routers/: admin.py  auth.py  chat.py  events.py  invoices.py  orders.py  payments.py  promocodes.py  wallets.py
backend/tasks/: email_tasks.py
backend/test_api_using_http/: README.http  (+6 more)
docs/: API.md  codebase-audit.md  codebase_audit.md  review_and_recommendations.md  security-audit.md  suggestions.md
frontend/: App.tsx  WebSocketService.ts  api.ts  auth.ts  package-lock.json  package.json  types.ts
migrations/: env.py
scripts/: seed.py
src/: .env  config.py  enums.py  main.py  main.py.backup  main.py.backup3  models.py  models_documentation.md  websocket_events.py  websocket_manager.py
test_api_using_http/: events.http  payments.http
tests/: conftest.py  test_auth.py  test_payments.py
(+133 files in other folders)
