[project]
name = "giftly"
version = "0.1.0"
description = "Giftly delivery/gifting marketplace API"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.91",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "sqladmin>=0.25.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "starlette>=1.0.0",
    "taskiq>=0.12.2",
    "taskiq-redis>=1.2.2",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "wtforms>=3.1.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pip-audit>=2.9.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
